Almost finish SongPlayer TODO: generate method for the shuffle (random songs) check everybutton

--- a/SecondAnniversary_Lior/Project_API/Project_API.csproj
+++ b/SecondAnniversary_Lior/Project_API/Project_API.csproj
@@ -55,6 +55,9 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="SongPlayer.xaml.cs">
+      <DependentUpon>SongPlayer.xaml</DependentUpon>
+    </Compile>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -67,6 +70,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SongPlayer.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs">
@@ -97,6 +104,15 @@
   <ItemGroup>
     <Resource Include="images\mute.png" />
     <Resource Include="images\sound.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="images\loop.png" />
+    <Resource Include="images\lyrics.png" />
+    <Resource Include="images\next.png" />
+    <Resource Include="images\pause.png" />
+    <Resource Include="images\play.png" />
+    <Resource Include="images\shuffle.png" />
+    <Resource Include="images\start.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
