--- a/SecondAnniversary_Lior/Project_API/Project_API.csproj
+++ b/SecondAnniversary_Lior/Project_API/Project_API.csproj
@@ -55,9 +55,19 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="AnniversaryWindow.xaml.cs">
+      <DependentUpon>AnniversaryWindow.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="SongInterface.xaml.cs">
+      <DependentUpon>SongInterface.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SongPlayer.xaml.cs">
       <DependentUpon>SongPlayer.xaml</DependentUpon>
     </Compile>
+    <Page Include="AnniversaryWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -70,6 +80,10 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Page Include="SongInterface.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SongPlayer.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
