Added custom message box

--- a/SecondAnniversary_Lior/Project_API/Project_API.csproj
+++ b/SecondAnniversary_Lior/Project_API/Project_API.csproj
@@ -61,6 +61,9 @@
     <Compile Include="BreakupWindow.xaml.cs">
       <DependentUpon>BreakupWindow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="CustomMessageBox.xaml.cs">
+      <DependentUpon>CustomMessageBox.xaml</DependentUpon>
+    </Compile>
     <Compile Include="MediaProgress.xaml.cs">
       <DependentUpon>MediaProgress.xaml</DependentUpon>
     </Compile>
@@ -84,6 +87,10 @@
       <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="BreakupWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="CustomMessageBox.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
