Decided that the autorun will be the main file Checked if worked with autoruns Added icons for birthday and api projects

--- a/SecondAnniversary_Lior/Birthday_Surprise/Birthday_Surprise.csproj
+++ b/SecondAnniversary_Lior/Birthday_Surprise/Birthday_Surprise.csproj
@@ -36,6 +36,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>icons8-birthday-cake-100.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="AudioSwitcher.AudioApi, Version=3.0.0.209, Culture=neutral, PublicKeyToken=fda5729e2db3a64f, processorArchitecture=MSIL">
       <HintPath>..\packages\AudioSwitcher.AudioApi.3.0.0\lib\net40\AudioSwitcher.AudioApi.dll</HintPath>
@@ -113,6 +116,9 @@
   </ItemGroup>
   <ItemGroup>
     <Resource Include="Images\confetti.gif" />
+  </ItemGroup>
+  <ItemGroup>
+    <Resource Include="icons8-birthday-cake-100.ico" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
